fix(Title line): Short title line on small screens

--- a/src/styles/components/_content.scss
+++ b/src/styles/components/_content.scss
@@ -26,18 +26,6 @@
     margin-bottom: 7%;
     font-size: 0;
 
-    &::after {
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      display: block;
-      width: 92%;
-      height: 0;
-      overflow: hidden;
-      border-bottom: 1px solid $col-white;
-      content: '';
-    }
-
     @media screen and (max-width: 768px) and (max-height: 620px) and (orientation: landscape) {
       margin-bottom: 4%;
     }
@@ -56,6 +44,18 @@
     z-index: 1;
     display: inline-block;
     margin-right: 4.15%;
+
+    &::after {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      display: block;
+      width: 200%;
+      height: 0;
+      overflow: hidden;
+      border-bottom: 1px solid $col-white;
+      content: '';
+    }
 
     img {
       @include border-radius(50%);
@@ -107,11 +107,24 @@
 
     @include ellipsis();
 
+    position: relative;
     display: inline-block;
     flex: 1;
     margin: 0;
     font-weight: 300;
     cursor: text;
+
+    &::after {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 0;
+      overflow: hidden;
+      border-bottom: 1px solid $col-white;
+      content: '';
+    }
 
     @media screen and (max-width: 975px) {
       @include heading-size(24.4px);
